[gd_scene load_steps=30 format=2]

[ext_resource path="res://enemies/enemie1/enemie1.gd" type="Script" id=1]
[ext_resource path="res://assets/enemys/gravity_force/idle_12.png" type="Texture" id=2]
[ext_resource path="res://assets/enemys/gravity_force/idle_00.png" type="Texture" id=3]
[ext_resource path="res://assets/enemys/gravity_force/idle_01.png" type="Texture" id=4]
[ext_resource path="res://assets/enemys/gravity_force/idle_13.png" type="Texture" id=5]
[ext_resource path="res://assets/enemys/gravity_force/idle_06.png" type="Texture" id=6]
[ext_resource path="res://assets/enemys/gravity_force/idle_07.png" type="Texture" id=7]
[ext_resource path="res://assets/enemys/gravity_force/idle_02.png" type="Texture" id=8]
[ext_resource path="res://assets/enemys/gravity_force/idle_11.png" type="Texture" id=9]
[ext_resource path="res://assets/enemys/gravity_force/idle_09.png" type="Texture" id=10]
[ext_resource path="res://assets/enemys/gravity_force/idle_19.png" type="Texture" id=11]
[ext_resource path="res://assets/enemys/gravity_force/idle_18.png" type="Texture" id=12]
[ext_resource path="res://assets/enemys/gravity_force/idle_10.png" type="Texture" id=13]
[ext_resource path="res://assets/enemys/gravity_force/idle_16.png" type="Texture" id=14]
[ext_resource path="res://assets/enemys/gravity_force/idle_04.png" type="Texture" id=15]
[ext_resource path="res://assets/enemys/gravity_force/idle_05.png" type="Texture" id=16]
[ext_resource path="res://assets/enemys/gravity_force/idle_03.png" type="Texture" id=17]
[ext_resource path="res://assets/enemys/gravity_force/idle_08.png" type="Texture" id=18]
[ext_resource path="res://assets/enemys/gravity_force/idle_15.png" type="Texture" id=19]
[ext_resource path="res://assets/enemys/gravity_force/idle_14.png" type="Texture" id=20]
[ext_resource path="res://assets/enemys/gravity_force/idle_17.png" type="Texture" id=21]

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "enemie_atk"
length = 0.833333
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833334, 0.125, 0.166667, 0.208334, 0.25, 0.291667, 0.333334, 0.375, 0.416667, 0.458334, 0.5, 0.541667, 0.583334, 0.625001, 0.666667, 0.708334, 0.750001, 0.791667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 21 ), ExtResource( 12 ), ExtResource( 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.541667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 2.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "enemie_atk_left"
length = 1.125
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333, 1, 1.04167, 1.08333, 1.125 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.583334 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 2.0 ]
}

[sub_resource type="Animation" id=3]
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("..:collision_layer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../area_detection:collision_layer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../area_detection:collision_mask")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
length = 0.833333
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 21 ), ExtResource( 12 ), ExtResource( 11 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "return"
tracks/0/type = "value"
tracks/0/path = NodePath("..:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../area_detection:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../area_detection:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ null ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 37.8234

[sub_resource type="CircleShape2D" id=8]
radius = 114.856

[node name="enemie1" type="KinematicBody2D" groups=["enemy"]]
scale = Vector2( 0.7, 0.7 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.71429, -3.57143 )
scale = Vector2( 1.36161, 1.36161 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "move"
anims/RESET = SubResource( 10 )
anims/enemie_atk = SubResource( 1 )
anims/enemie_atk_left = SubResource( 2 )
anims/enemie_death = SubResource( 3 )
anims/move = SubResource( 4 )
anims/return = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy"]]
shape = SubResource( 9 )

[node name="area_detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_detection"]
shape = SubResource( 8 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.42857, 8.10623e-06 )
scale = Vector2( 17.2857, 16.8571 )

[node name="effe_attck" type="AudioStreamPlayer2D" parent="."]

[node name="effect_death" type="AudioStreamPlayer2D" parent="."]

[node name="effect_damage" type="AudioStreamPlayer2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="area_detection" to="." method="_on_area_detection_area_entered"]
[connection signal="body_entered" from="area_detection" to="." method="_on_area_detection_body_entered"]
[connection signal="body_exited" from="area_detection" to="." method="_on_area_detection_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
